fixed z-index bug with dropdown many list and clear filters button

--- a/src/components/FilterItem/DropdownMany/styles.module.css
+++ b/src/components/FilterItem/DropdownMany/styles.module.css
@@ -50,7 +50,7 @@
 	position: absolute;
 	top: 48px;
 	left: 0;
-	z-index: 5;
+	z-index: 100;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
